catalog subnav alignment fix

--- a/lms/static/sass/_catalog.scss
+++ b/lms/static/sass/_catalog.scss
@@ -33,7 +33,6 @@
 			list-style: none;
 			margin-top:1.2em;
 			margin-bottom:1.2em;
-			padding-left:0;
 		}
 		li
 		{
